src/objects/Opportunity_Rate_Plan_Charge_Tier__c.object
<CustomObject>
    <fields>
        <fullName>End_Unit__c</fullName>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Rate Plan Charge</label>
        <referenceTo>Opportunity_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plan_Charge_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <label>Start Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Rate Plan Charge Tier</label>
    <nameField>
        <label>Opportunity Rate Plan Charge Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>